k8s/apps/postgresql/manifests/postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: postgresql
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app: postgresql
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  namespace: postgresql
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  serviceName: postgresql
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 70
        runAsGroup: 70
        fsGroup: 70
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: postgresql
          image: postgres:18.6-alpine3.23@sha256:885cf05d376c7cf27afef02073e6bdac3841252537f16e244fd1c1e6a7c99fb1
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
            - name: config
              mountPath: /etc/postgresql/postgresql.conf
              subPath: postgresql.conf
          args:
            - -c
            - config_file=/etc/postgresql/postgresql.conf
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 320Mi
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - homelab
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: initdb
          configMap:
            name: postgresql-initdb
        - name: config
          configMap:
            name: postgresql-config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path-ssd
        resources:
          requests:
            storage: 20Gi
